@@ -1,6 +1,10 @@
-	FigureManager.resize(width, height): resize the window
-	specified in pixels
-	
+    Removed the copy_bbox_transform from transforms.py; added
+    shallowcopy methods to all transforms.  All transforms already
+    had deepcopy methods.
+
+    FigureManager.resize(width, height): resize the window
+    specified in pixels
+
     barh: x and y args have been renamed to width and bottom
     respectively, and their order has been swapped to maintain
     a (position, value) order.
